--- a/starter-code/design-system.html
+++ b/starter-code/design-system.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Meta Tags -->
 
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- Google fonts -->
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Bellefair&family=Barlow:wght@400;700&display=swap">
 
         <!-- stylesheet -->
+
         <link rel="stylesheet" href="stylesheets/index.css">
         <title>Design System</title>
 
@@ -23,13 +26,14 @@
             <h1 class="ff-serif">Design System</h1>
 
             <!-- SECTION ONE: COLORS -->
+
             <section id="colors">
 
                 <h2 class="numbered-title">
                     <span>01</span> 
                     colors
                 </h2>
-                <div class="grid" style="grid-template-columns: repeat(3,1fr);"> 
+                <div class="grid"> 
                     <div>
                         <div class="bg-light txt-dark"
                         style="padding: 3rem 1rem 1rem; border: 1px solid white">
@@ -58,6 +62,7 @@
             </section>
 
             <!-- SECTION TWO: TYPOGRAPHY -->
+
             <section id="typography"  style="margin: 4rem 0">
                 <h2 class="numbered-title">
                     <span>02 </span>
@@ -77,7 +82,7 @@
                             <p class="txt-light">Heading 3 - Bellefair Regular - 56px</p>
                             <p class="fz-700 ff-serif uppercase">Jupiter & Saturn</p>
                         </div>
-                        <div> 
+                        <div>
                             <p class="txt-light">Heading 4 - Bellefair Regular - 32px</p>
                             <p class="fz-600 ff-serif uppercase">Uranus, Neptune, & Pluto</p>
                         </div>
@@ -110,6 +115,7 @@
             </section>
 
             <!-- SECTION THREE: INTERACTIVE ELEMENTS -->
+
             <section class="flow" id="interactive-elements">
                 <h2 class="numbered-title"><span>03</span> Interactive elements</h2>
                 
